# django-pbsmmapi

./: .gitignore  .pre-commit-config.yaml  .yamlfmt.yaml  README.md  README.rst  TODO  docker-compose.yml  pyproject.toml  runtests.py  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml
__DATA__/: asset.txt  collection.txt  episode.txt  franchise.txt  season.txt  show.txt  special.txt
deluxe-original/: apps.py
deluxe-original/abstract/: models.py
deluxe-original/asset/: helpers.py  relations.py
deluxe-original/episode/: admin.py
deluxe-original/franchise/: admin.py  ingest.py  models.py
deluxe-original/remoteasset/: models.py
deluxe-original/season/: models.py
deluxe-original/show/: admin.py  ingest.py  models.py
deluxe-original/special/: models.py
django_pbsmmapi.egg-info/: PKG-INFO  SOURCES.txt
django_pbsmmapl.egg-info/: PKG-INFO  SOURCES.txt
pbsmmapi/: __init__.py  foo.py
pbsmmapi/abstract/: ORIG-models.py  admin.py  constants.py  gatekeeper.py  helpers.py  manager.py  mixin_helpers.py  mixins.py  models.py
pbsmmapi/api/: api.py  helpers.py
pbsmmapi/asset/: admin.py  foo.py  forms.py  helpers.py  ingest.py  ingest_asset.py  models.py  relations.py  tasks.py
pbsmmapi/changelog/: models.py  tasks.py
pbsmmapi/collection/: admin.py  forms.py  ingest.py  models.py
pbsmmapi/custom/: select_model.py
pbsmmapi/deluxe/: admin.py  models.py
pbsmmapi/episode/: __init__.py  admin.py  cms_apps.py  forms.py  ingest.py  ingest_episode.py  models.py  urls.py  views.py
pbsmmapi/franchise/: admin.py  ingest.py  models.py  tasks.py
pbsmmapi/helpers/: custom.py
pbsmmapi/light/: abstract_models.py  models.py
pbsmmapi/migrations/: 0001_initial.py  0002_auto_20180213_1915.py  0003_pbsmmcollection.py  0004_pbsmmfranchise.py  0005_auto_20180214_1552.py  0006_assetremoteassetrelation.py  0007_assetepisoderelation.py  0008_auto_20180215_1436.py
pbsmmapi/pure/: admin.py  models.py
pbsmmapi/record/: apps.py  models.py
pbsmmapi/remoteasset/: admin.py  forms.py  ingest.py  models.py
pbsmmapi/season/: __init__.py  admin.py  cms_apps.py  forms.py  ingest.py  (+5 more)
test_fixtures/: nova_episodes_0057421c-9655-405c-b63e-144153d46666.json  nova_episodes_0057421c-9655-405c-b63e-144153d46666_assets.json  nova_episodes_006bbb99-138a-40c9-9b3b-8fa6cf149b42.json  nova_episodes_006bbb99-138a-40c9-9b3b-8fa6cf149b42_assets.json  nova_episodes_01c0e096-30b4-4ac2-a739-dec7a84eda7f.json  nova_episodes_01c0e096-30b4-4ac2-a739-dec7a84eda7f_assets.json  nova_episodes_02061944-6466-437b-849f-be8824a7b371.json  nova_episodes_02061944-6466-437b-849f-be8824a7b371_assets.json  nova_episodes_02a41278-45e4-4fae-aa71-ad3bdeebdf41.json  nova_episodes_02a41278-45e4-4fae-aa71-ad3bdeebdf41_assets.json  nova_episodes_035ed301-907a-4fa2-a169-9fc211adaf3c.json  nova_episodes_035ed301-907a-4fa2-a169-9fc211adaf3c_assets.json  nova_episodes_036256a4-cb85-4be2-bd43-202b5872c69f.json  nova_episodes_036256a4-cb85-4be2-bd43-202b5872c69f_assets.json  nova_episodes_058d1f20-3872-4d3d-a346-db35b7197fbc.json  nova_episodes_058d1f20-3872-4d3d-a346-db35b7197fbc_assets.json  nova_episodes_05e20eba-ad43-4053-a4eb-ffa158697411.json  nova_episodes_05e20eba-ad43-4053-a4eb-ffa158697411_assets.json  nova_episodes_0650c773-5c57-4749-8ca7-215fd507281c.json  nova_episodes_0650c773-5c57-4749-8ca7-215fd507281c_assets.json  nova_episodes_067d5f1b-4d0f-4d8b-b1d9-f70d7e78a02e.json  nova_episodes_067d5f1b-4d0f-4d8b-b1d9-f70d7e78a02e_assets.json  nova_episodes_08161789-765f-49c2-8900-ecc025dcca21.json  nova_episodes_08161789-765f-49c2-8900-ecc025dcca21_assets.json  nova_episodes_0834e64f-68c0-4fb9-b650-0fc9cf68a118.json  nova_episodes_0834e64f-68c0-4fb9-b650-0fc9cf68a118_assets.json  nova_episodes_0834fc35-116c-4d52-8b8d-c00c99cd9dbb.json  nova_episodes_0834fc35-116c-4d52-8b8d-c00c99cd9dbb_assets.json  nova_episodes_08656dd1-3d3a-4772-bf20-dc5270307f22.json  nova_episodes_08656dd1-3d3a-4772-bf20-dc5270307f22_assets.json  nova_episodes_09a1cf18-8476-4cd7-bd97-e68fbb7edcb4.json  nova_episodes_09a1cf18-8476-4cd7-bd97-e68fbb7edcb4_assets.json  nova_episodes_09f3940b-0168-4d72-883e-537146704823.json  nova_episodes_09f3940b-0168-4d72-883e-537146704823_assets.json  nova_episodes_0a98139b-61fd-43c1-a332-53c8c7d3067a.json  nova_episodes_0a98139b-61fd-43c1-a332-53c8c7d3067a_assets.json  nova_episodes_0b4be5d5-82cb-432e-9ff1-e436dbaac4c3.json  nova_episodes_0b4be5d5-82cb-432e-9ff1-e436dbaac4c3_assets.json  nova_episodes_0b967913-0b2b-4abf-afb5-26f3cdaca243.json  nova_episodes_0b967913-0b2b-4abf-afb5-26f3cdaca243_assets.json  (+871 more)
tests/: test_models.py  test_show_ingest.py  url_map.py  urls.py
(+187 files in other folders)
