[tool.poetry]
name='django-pbsmmapi'
version='1.0.0'
description="Django models that import content from the PBS MediaManager API"
readme='README.md'
license='MIT License, see LICENSE'
authors=['Bob Donahue']
packages = [
    { include = "pbsmmapi" }
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 4.1',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "*"
requests = "*"
python-dateutil = "*"
pytz = "*"

[tool.poetry.group.dev.dependencies]
autoimport = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pylint = "*"
pylint-django = "*"
pytest = "*"
reorder-python-imports = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true

[tool.isort]
profile = "google"
src_paths = ["pbsmmapi"]
single_line_exclusions = []
force_sort_within_sections = false

[tool.pylint.main]
extension-pkg-whitelist = ["pydantic"]
load-plugins = ["pylint_django"]

[tool.pylint.logging]
disable = ["raw-checker-failed", "bad-inline-option", "locally-disabled", "file-ignored", "suppressed-message", "useless-suppression", "deprecated-pragma", "use-symbolic-message-instead", "missing-module-docstring", "missing-class-docstring", "too-few-public-methods", "missing-function-docstring", "too-many-lines", "logging-format-interpolation", "wrong-import-position", "too-many-ancestors", "django-not-configured"]
