[tool.poetry]
name='django-pbsmmapi'
version='1.0.0'
description="Django models that import content from the PBS MediaManager API"
readme='README.md'
license='MIT License, see LICENSE'
authors=['Bob Donahue']
packages = [
    { include = "pbsmmapi" }
]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Web Environment',
    'Framework :: Django',
    'Framework :: Django :: 4.0',
    'Framework :: Django :: 4.1',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Operating System :: OS Independent',
    'Topic :: Internet :: WWW/HTTP',
    'Topic :: Internet :: WWW/HTTP :: Dynamic Content',
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = "*"
requests = "*"
python-dateutil = "*"
pytz = "*"

[tool.poetry.group.dev.dependencies]
autoimport = "*"
flake8 = "*"
ipython = "*"
isort = "*"
pylint = "*"
pylint-django = "*"
pytest = "*"
reorder-python-imports = "*"
django-stubs = "*"
black = "*"
ruff = "*"
devtools = "*"
coverage = "*"
mock = "*"
pre-commit = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
preview = true

[tool.isort]
profile = "black"
src_paths = ["pbsmmapi"]
single_line_exclusions = []
force_sort_within_sections = true
force_grid_wrap = 2
